<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="440dp"
                android:layout_height="350dp"
                android:src="@drawable/fundohome" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:background="@drawable/home_cardopitions"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bd_card_cinza"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="65dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/cardclima"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp"
                            app:cardElevation="0dp">

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/home_cardopitions"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            app:cardElevation="10dp">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/iconrelogio" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/home_cardopitions"
                            android:onClick="qrcode"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            app:cardElevation="10dp">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="qrcode"
                                app:srcCompat="@drawable/iconqrcode" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"></LinearLayout>

                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/home_cardopitions"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            app:cardElevation="10dp">

                            <ImageView
                                android:id="@+id/imageView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/iconprofile" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="5dp"
                    android:paddingTop="20dp"
                    android:paddingRight="5dp"
                    android:text="@string/novidades"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/novidades_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:padding="8dp"></LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="5dp"
                    android:paddingTop="20dp"
                    android:paddingRight="5dp"
                    android:text="@string/animais"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/mamifero" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="17dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/aves" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="17dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/anfibios" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="17dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageVieww14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/repteis" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="17dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/aquaticos" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="13dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/outifit"
                        android:text="@string/mamiferos"
                        android:textColor="@color/cinza_medio"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="14dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/outifit"
                        android:text="@string/aves"
                        android:textColor="@color/cinza_medio"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/outifit"
                        android:text="@string/anfibios"
                        android:textColor="@color/cinza_medio"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="9dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/outifit"
                        android:text="@string/repteis"
                        android:textColor="@color/cinza_medio"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/outifit"
                        android:text="@string/aquaticos"
                        android:textColor="@color/cinza_medio"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="5dp"
                    android:paddingTop="20dp"
                    android:paddingRight="5dp"
                    android:text="@string/atracoes"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/atracoes_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="8dp"></LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>